test/testcase/version_1/pass/playlist-namespace-nested-proper.xspf
<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList />
	<extension application="http://example.com/" xmlns:another="http://site/namespace/">
		<three />
		<another:four />
	</extension>
</playlist>
