test/testcase/version_1/fail/playlist-element-forbidden-attribution.xspf
<?xml version="1.0" encoding="utf-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<attribution>
		<info>http://element/forbidden</info>
	</attribution>
	<trackList />
</playlist>
